# leetcode

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  problem_runner.h  stream_operators.h  template.h
data/: BTree.h  BinaryTree.h  LinkedList.h
easy/: 100-same-tree.h  191-number-of-1-bits.h  2185-counting-words-with-a-given-prefix.h  2236-root-equals-sum-of-children.h  2347-best-poker-hand.h  383-ransom-note.h  504-base-7.h  543-diameter-of-binary-tree.h  example.h
medium/: 116-populating-next-right-pointers-in-each-node.h  151-reverse-words-in-a-string.h  1864-minimum-number-of-swaps-to-make-the-binary-string-alternating.h  1963-minimum-number-of-swaps-to-make-the-string-balanced.h  2-add-two-numbers.h  2191-sort-the-jumbled-numbers.h  71-simplify-path.h  921-minimum-add-to-make-parentheses-valid.h
src/: main.cpp  problem_runner.h  stream_operators.h  template.h
src/data/: BinaryTree.h
src/easy/: 100-same-tree.h  1046-last-stone-weight.h  1789-primary-department-for-each-employee.sql  2068-check-whether-two-strings-are-almost-equivalent.h  2169-count-operations-to-obtain-zero.h  217-contains-duplicate.h  2206-divide-array-into-equal-pairs.h  2224-minimum-number-of-operations-to-convert-time.h  2335-minimum-amount-of-time-to-fill-cups.h  2379-minimum-recolors-to-get-k-consecutive-black-blocks.h  2432-the-employee-that-worked-on-the-longest-task.h  2515-shortest-distance-to-target-string-in-a-circular-array.h  2696-minimum-string-length-after-removing-substrings.h  2710-remove-trailing-zeros-from-a-string.h  2784-check-if-array-is-good.h  2806-account-balance-after-rounded-purchase.h  2839-check-if-strings-can-be-made-equal-with-operations-i.h  405-convert-a-number-to-hexadecimal.h  821-shortest-distance-to-a-character.h
src/hard/: 1096-brace-expansion-ii.h  1106-parsing-a-boolean-expression.h  2366-minimum-replacements-to-sort-the-array.h
src/medium/: 1405-longest-happy-string.h  19-remove-nth-node-from-end-of-list.h  2125-number-of-laser-beams-in-a-bank.h  2530-maximal-score-after-applying-k-operations.h  2583-kth-largest-sum-in-a-binary-tree.h  2641-cousins-in-binary-tree-ii.h  2938-separate-black-and-white-balls.h  3-longest-substring-without-repeating-characters.h  3096-minimum-levels-to-gain-more-points.h  670-maximum-swap.h  7-reverse-integer.h  8-string-to-integer-atoi.h
